WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56619
Fixed some string leaks seen on the buildbot
https://bugs.webkit.org/show_bug.cgi?id=56619
Summary
Fixed some string leaks seen on the buildbot
Geoffrey Garen
Reported
2011-03-17 18:06:57 PDT
Fixed some string leaks seen on the buildbot
Attachments
Patch
(1.09 KB, patch)
2011-03-17 18:07 PDT
,
Geoffrey Garen
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-03-17 18:07:59 PDT
Created
attachment 86126
[details]
Patch
Mark Rowe (bdash)
Comment 2
2011-03-17 18:10:32 PDT
Comment on
attachment 86126
[details]
Patch r=me lulz
Geoffrey Garen
Comment 3
2011-03-17 18:11:10 PDT
Committed
r81420
: <
http://trac.webkit.org/changeset/81420
>
Adam Roben (:aroben)
Comment 4
2011-03-17 21:37:26 PDT
Geoff, is this a dupe of
bug 56045
?
Geoffrey Garen
Comment 5
2011-03-17 23:02:26 PDT
***
Bug 56045
has been marked as a duplicate of this bug. ***
Geoffrey Garen
Comment 6
2011-03-17 23:03:05 PDT
(In reply to
comment #4
)
> Geoff, is this a dupe of
bug 56045
?
Yessir!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug