2011-03-17  Geoffrey Garen  <ggaren@apple.com>

Reviewed by Mark Rowe.

        Fixed some string leaks seen on the buildbot
        https://bugs.webkit.org/show_bug.cgi?id=56619

        * runtime/PropertyMapHashTable.h:
        (JSC::PropertyTable::~PropertyTable): DEref!


Canonical link: https://commits.webkit.org/71292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81420 268f45cc-cd09-0410-ab3c-d52691b4dbfc